basic sensor comms

--- a/src/nodes/Makefile
+++ b/src/nodes/Makefile
@@ -1,11 +1,13 @@
-CONTIKI_PROJECT=rpi-bridge
+CONTIKI_PROJECT=rpi_bridge
 all: $(CONTIKI_PROJECT)
 WORKING_DIR=$(CURDIR)
 
 CONTIKI = $(WORKING_DIR)/../../contiki
+DEFINES=CC26XX_UART_CONF_ENABLE
+CONTIKI_WITH_IPV6 = 1
+#UIP_CONF_ROUTER = 0
+CFLAGS += -DUIP_CONF_ND6_SEND_NA=1
 include $(CONTIKI)/Makefile.include
-
-CFLAGS += -DRF_CORE_CONF_CHANNEL=11
 
 prog: 
 	$(HOME)/Downloads/DSLite/DebugServer/bin/DSLite load -c ~/Downloads/DSLite/CC2650F128_TIXDS110_Connection.ccxml -f $(CONTIKI_PROJECT).elf
