tweaked networking to work around payload max size, various bug fixes and efficiencies, splitting of processes and timers added to sensor readings to reduce power consumption

--- a/src/nodes/Makefile
+++ b/src/nodes/Makefile
@@ -1,9 +1,13 @@
-CONTIKI_PROJECT=rpi_bridge
+CONTIKI_PROJECT=remote_node
 all: $(CONTIKI_PROJECT)
 WORKING_DIR=$(CURDIR)
 
 CONTIKI = $(WORKING_DIR)/../../contiki
 DEFINES=CC26XX_UART_CONF_ENABLE
+ifeq ($(CONTIKI_PROJECT),remote_node)
+	DEFINES+= CC26XX_UART_CONF_BAUD_RATE=9600
+  $(info $$DEFINES is [${DEFINES}])
+endif
 CONTIKI_WITH_IPV6 = 1
 #UIP_CONF_ROUTER = 0
 CFLAGS += -DUIP_CONF_ND6_SEND_NA=1
